# pandas-ylt

./: .gitignore  README.md  examples.ipynb  publish_package.sh  pyproject.toml  requirements.txt  setup.py  yealt_examples.ipynb  yelt_examples_epcurves.ipynb  yelt_examples_layer_losses.ipynb  yelt_examples_loadings.ipynb  yelt_examples_ylt_contributions.ipynb
.github/workflows/: pylint.yml
cattbl/: base_classes.py  eventlossbeta.py  yeareventallocloss.py  yeareventloss.py  yearloss.py  yelt.py  ylt.py
pandas_ylt/: base_classes.py  layer.py  lossexceedance.py  tmp_reinst_calc.ipynb  yeareventloss.py  yearloss.py
tests/: __init__.py  create_test_yelt.py  summarise_test_data.ipynb  test_layer.py  test_loss_series.py  test_yealt.py  test_yelt.py  test_ylt.py
tests/_data/: example_pareto_poisson_yelt.csv
