[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pandas-ylt"
version = "0.4.0"
authors = [
  { name="Iain Bailey", email="iainbailey@gmail.com" },
]
description = "Wrappers to help work with Year Loss Table data in python pandas"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "pandas>=1.4.2",
    "numpy>=1.22.3",
    "matplotlib>=3.5.2",
    "scipy>=1.8.1",
    "pytest>=8.3.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/iwbailey/pandas-ylt"
